# MoneyPotAgent

./: .gitignore  CLAUDE.md  PRODUCT_REQUIREMENT.md  README.md  docker-compose.yml  moneypot.code-workspace
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/ai/: __init__.py  client.py  coach.py  structured_outputs.py
backend/app/ai/prompts/: __init__.py  impact_analysis.py  system.py  trade_off.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  chat.py  expenses.py  goals.py  impact.py  pots.py  router.py  users.py
backend/app/core/: __init__.py  exceptions.py  middleware.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  base.py  chat.py  expense.py  goal.py  pot.py  user.py
backend/app/schemas/: __init__.py  analytics.py  chat.py  expense.py  goal.py  pot.py  user.py
backend/app/services/: __init__.py  analytics_service.py  expense_service.py  goal_service.py  impact_service.py  pot_service.py  user_service.py
frontend/: Dockerfile  README.md  moneypot-frontend.code-workspace  package-lock.json  package.json  pnpm-lock.yaml
frontend-template/: CLAUDE.md  index.html  package.json  pnpm-lock.yaml
frontend-template/src/: app.tsx  main.tsx  style.css
frontend-template/src/pages/: home.tsx
frontend/src/: app.tsx  style.css
frontend/src/lib/: constants.ts
frontend/src/mocks/: data.ts
frontend/src/pages/: landing.tsx
(+36 files in other folders)
